<resources>
    <string name="app_name">Food Preservation</string>
    <string name="app_title">Food Preservation</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="username_email_or_phone_number">username, email, or phone number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login_button">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="go_to_sign_up">Sign Up</string>
</resources>