<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/existingContentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/app_title"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="7dp"
            android:id="@+id/login_email"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/custom_input"
            android:hint="@string/username_email_or_phone_number"
            android:autofillHints="emailAddress"
            android:inputType="textEmailSubject" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="7dp"
            android:id="@+id/password"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/custom_input"
            android:hint="@string/enter_your_password"
            android:autofillHints="password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/black"
            android:text="@string/login_button"
            android:textColor="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/signUpPageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_sign_up"
            android:textColor="#DD2C00"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>
